project(source)

set(SOURCE_FILES
        Chapter_1/Behavior/FlyBehavior.h
        Chapter_1/Behavior/QuackBehavior.h
        Chapter_1/Duck.h
        Chapter_1/Duck.cc
        Chapter_1/Behavior/FlyWithWings.h
        Chapter_1/Behavior/FlyWithWings.cc
        Chapter_1/Behavior/CanNotFly.h
        Chapter_1/Behavior/CanNotFly.cc
        Chapter_1/Behavior/QuackLoud.cc
        Chapter_1/Behavior/QuackLoud.h
        Chapter_1/Behavior/MuteQuack.cc
        Chapter_1/Behavior/MuteQuack.h
        Chapter_1/Behavior/Squeak.cc
        Chapter_1/Behavior/Squeak.h
        Chapter_2/Interface/Subject.h
        Chapter_2/Interface/Observer.h
        Chapter_2/Interface/DisplayElement.h
        Chapter_2/WeatherData.cc
        Chapter_2/WeatherData.h
        Chapter_2/CurrentWeatherConditionsDisplay.cc
        Chapter_2/CurrentWeatherConditionsDisplay.h
        Chapter_2/MoreComplexDisplay.cc
        Chapter_2/MoreComplexDisplay.h
        Chapter_3/Beverage.cc
        Chapter_3/Beverage.h
        Chapter_3/Condiments/CondimentDecorator.h
        Chapter_3/Drinks/Espresso.cc
        Chapter_3/Drinks/Espresso.h
        Chapter_3/Drinks/HouseBlend.cc
        Chapter_3/Drinks/HouseBlend.h
        Chapter_3/Condiments/Mocha.cc
        Chapter_3/Condiments/Mocha.h
        Chapter_3/Condiments/Soy.cc
        Chapter_3/Condiments/Soy.h
        Chapter_3/Condiments/Whip.cc
        Chapter_3/Condiments/Whip.h
        Chapter_3/Drinks/DarkRoast.cc
        Chapter_3/Drinks/DarkRoast.h
        Chapter_3/Condiments/CondimentDecorator.cc
)

add_library(source STATIC ${SOURCE_FILES})